--- a/spam-filter.cabal
+++ b/spam-filter.cabal
@@ -23,6 +23,7 @@ executable spam-filter
     build-depends:    base ^>=4.18.2.1,
                       text >= 1.2 && <1.3,
                       containers >= 0.6 && <0.7,
-                      directory >= 1.3 && <1.4
+                      directory >= 1.3 && <1.4,
+                      bytestring >= 0.10 && < 0.12
     hs-source-dirs:   app
     default-language: Haskell2010
